--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </section>
     <div class="hero"></div>
     <section class="content">
+        <!-- put alt descriptions in image tags for screen readers in these three sections -->
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A desk with fresh coffee, a magnifying glass, highlighters, and a notebook"/>
             <h2>Search Engine Optimization</h2>
@@ -44,7 +45,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="a view from above of a crowded conference table with many card stock cutouts of words and sybols related to social media scattered about"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
