--- a/index.html
+++ b/index.html
@@ -32,33 +32,38 @@
     <section class="content">
         <!-- put alt descriptions in image tags for screen readers in these three sections -->
         <!--added "search engine optimization id to fix a broken href in the nav, and then had to add "search engine optimization" class to give CSS something to select--> 
-        <!--Deleted unnecessary float-left and float-right classes applied to the background and content images-->
         <section id="search-engine-optimization" class="search-engine-optimization"> 
-            <img src="./assets/images/search-engine-optimization.jpg"  alt="A desk with fresh coffee, a magnifying glass, highlighters, and a notebook"/>
+            <img src="./assets/images/search-engine-optimization.jpg"  
+            alt="A desk with fresh coffee, a magnifying glass, highlighters, and a notebook" 
+            class="float-left"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="an over the shoulder view of a screen showing a graph of reputation growing over time"/>
+            <img src="./assets/images/online-reputation-management.jpg"  
+            alt="an over the shoulder view of a screen showing a graph of reputation growing over time"
+            class="float-right"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="a view from above of a crowded conference table with many card stock cutouts of words and sybols related to social media scattered about"/>
+            <img src="./assets/images/social-media-marketing.jpg" 
+            alt="a view from above of a crowded conference table with many card stock cutouts of words and sybols related to social media scattered about" 
+            class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
+        <section class="benefit-lead">
     </section>
     <section class="benefits">
         <!-- added alt captions to images for users using screen readers -->
      
-        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" 
             alt="a small black and white abstract emblem with half a gear, an arrow, and a dollar sign"/>
@@ -93,7 +98,6 @@
 </body>
 
 </html> -->
-
 
 
 
