--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-        <section class="benefit-lead">
+   
     </section>
-    <section class="benefits">
+    <aside class="benefits">
         <!-- added alt captions to images for users using screen readers -->
-     
+        <section class="benefit-types">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" 
             alt="a small black and white abstract emblem with half a gear, an arrow, and a dollar sign"/>
@@ -71,7 +71,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit-types">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" 
             alt= "a small black and white abstract emblem of a torso with a lightbulb in place of a head"/>
@@ -79,7 +79,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit-types">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"
             alt= "a small black and white abstract emblem of a gear with dollar signs" />
@@ -88,7 +88,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
-    </section>
+    </aside>
     <section class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
