fixed bug that was preventing styling in the content section, fixed bug that was dislocating text in side bar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="content">
         <!-- put alt descriptions in image tags for screen readers in these three sections -->
         <!--added "search engine optimization id to fix a broken href in the nav, and then had to add "search engine optimization" class to give CSS something to select--> 
-        <section id="search-engine-optimization" class="search-engine-optimization"> 
+        <section id="search-engine-optimization" class="content-types"> 
             <img src="./assets/images/search-engine-optimization.jpg"  
             alt="A desk with fresh coffee, a magnifying glass, highlighters, and a notebook" 
             class="float-left"/>
@@ -41,7 +41,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="content-types" >
             <img src="./assets/images/online-reputation-management.jpg"  
             alt="an over the shoulder view of a screen showing a graph of reputation growing over time"
             class="float-right"/>
@@ -50,7 +50,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="content-types">
             <img src="./assets/images/social-media-marketing.jpg" 
             alt="a view from above of a crowded conference table with many card stock cutouts of words and sybols related to social media scattered about" 
             class="float-left" />
